--- a/styles/light.css
+++ b/styles/light.css
@@ -9,4 +9,28 @@
     Так стили написанные ниже будут иметь больший вес,
     чем стили в медиазапросе предпочтений пользователя
   */
+  --main-color: #353430;
+  --accent-color: #FF8DCB;
+  --bg-color: #FFF1F7;
+  --logo-color: #FFC2E6;
+  --display-rec: none;
+  --bg-image: url("../images/cover-image-light.png");
+  --main-title-color: #353430;
+  --decor-color: #353430;
 }
+
+/* :root.theme-light {
+  --main-color: #353430;
+  --accent-color: #FF8DCB;
+  --bg-color: #FFF1F7;
+  --logo-color: #FFC2E6;
+}
+
+@media (prefers-color-scheme: light) {
+  :root {
+    --main-color: #353430;
+    --accent-color: #FF8DCB;
+    --bg-color: #FFF1F7;
+    --logo-color: #FFC2E6;
+  }
+} */
