--- a/styles/variables.css
+++ b/styles/variables.css
@@ -2,3 +2,15 @@
   Переменные для вашего проекта
   и их переопределение под различные устройства
 */
+
+:root {
+  --main-color: #F1B2CE;
+  --accent-color: #FF0070;
+  --bg-color: #000028;
+  --main-title-color: #000028;
+  --logo-color: #DB00FF;
+  --bg-image: url("../images/cover-image-dark.png");
+  --logo-shadow-color: #FF0070;
+  --decor-color: #FF0070;
+  --display-rec: block; 
+}
