--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,19 +1,24 @@
-/*
-  Специально для тёмной темы при наличии класса,
-  здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_dark {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
+  --main-color: #F1B2CE;
+  --title-bg-color: #FF0070;
+  --bg-color: #000028;
+  --cover-description-color: #DB00FF;
+  --content-title-color: #000028;
+  --accent-color: #FF0070;
+  --accent-color-transparent: rgb(255 0 112 / 0.4);
+  background-image: url("../images/cover-image-dark.png");
 }
 
-/* :root.theme-dark {
+.page.theme_dark .decorated-zone-dark {
+  display: block;
+}
+
+:root.theme-dark {
   --main-color: #F1B2CE;
-  --accent-color: #FF0070;
+  --title-bg-color: #FF0070;
   --bg-color: #000028;
-  --logo-color: #DB00FF;
-} */
+  --cover-description-color: #DB00FF;
+  --content-title-color: #000028;
+  --accent-color: #FF0070;
+  --accent-color-transparent: rgb(255 0 112 / 0.4);
+}
