--- a/styles/light.css
+++ b/styles/light.css
@@ -1,36 +1,46 @@
-/*
-  Специально для светлой темы при наличии класса.
-  Здесь окажутся стили, которые нужно переопределить принудительно,
-  переключая тему
-*/
-
 .page.theme_light {
-  /* сохраните этот селектор в приведённом виде.
-    Так стили написанные ниже будут иметь больший вес,
-    чем стили в медиазапросе предпочтений пользователя
-  */
   --main-color: #353430;
-  --accent-color: #FF8DCB;
+  --title-bg-color: #FF8DCB;
   --bg-color: #FFF1F7;
-  --logo-color: #FFC2E6;
-  --display-rec: none;
-  --bg-image: url("../images/cover-image-light.png");
-  --main-title-color: #353430;
-  --decor-color: #353430;
+  --cover-description-color: #FFC2E6;
+  --content-title-color: #353430;
+  --accent-color: #353430;
+  --accent-color-transparent: rgb(53 52 48 / 0.4);
+  background-image: url("../images/cover-image-light.png");
 }
 
-/* :root.theme-light {
-  --main-color: #353430;
-  --accent-color: #FF8DCB;
-  --bg-color: #FFF1F7;
-  --logo-color: #FFC2E6;
+.page.theme_light .decorated-zone-dark {
+  display: none;
 }
+
+/* С этим ничего не меняется
+
+:root.theme-light {
+  --main-color: #353430;
+  --title-bg-color: #FF8DCB;
+  --bg-color: #FFF1F7;
+  --cover-description-color: #FFC2E6;
+  --content-title-color: #353430;
+  --accent-color: #353430;
+  --accent-color-transparent: rgb(53 52 48 / 0.4);
+} */
 
 @media (prefers-color-scheme: light) {
   :root {
     --main-color: #353430;
-    --accent-color: #FF8DCB;
+    --title-bg-color: #FF8DCB;
     --bg-color: #FFF1F7;
-    --logo-color: #FFC2E6;
+    --cover-description-color: #FFC2E6;
+    --content-title-color: #353430;
+    --accent-color: #353430;
+    --accent-color-transparent: rgb(53 52 48 / 0.4);
   }
-} */
+
+  .page {
+    background-image: url("../images/cover-image-light.png");
+  }
+
+  .page .decorated-zone-dark {
+    display: none;
+  }
+}
