--- a/styles/style.css
+++ b/styles/style.css
@@ -1,39 +1,39 @@
 .page {
-  background-image: var(--bg-image);
+  background-image: url("../images/cover-image-dark.png");
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
-  font-family: 'IBM Plex Mono';
+  background-attachment: fixed;
+  font-family: 'IBM Plex Mono', sans-serif;
   font-weight: normal;
   background-color: var(--bg-color);
-  height: 100vh;
-  background-attachment: fixed;
+  block-size: 100vh;
 }
 
-/* HEADER */
+/* HEADER ----------------------------------------------------*/
 
 .header {
   position: relative;
-  height: 100vh;
-  padding-block-start: 10px;
-  padding-block-end: 10px;
+  block-size: 100vh;
+  padding-block-start: 17px;
+  padding-block-end: 13px;
   margin-block-end: 40px;
   display: grid;
   grid-template-rows: repeat(3, 1fr);
 }
 
-/* Декоративные уголки */
+ /* Декоративные элементы */
 
 .decorated-zone::before {
   content: '';
   position: absolute;
   inset-block-start: 10px;
   inset-inline-end: 10px;
-  width: 25px;
-  height: 25px;
+  inline-size: 25px;
+  block-size: 25px;
   z-index: 1;
-  border-block-start: 1px solid var(--decor-color);
-  border-inline-end: 1px solid var(--decor-color);
+  border-block-start: 1px solid var(--accent-color);
+  border-inline-end: 1px solid var(--accent-color);
 }
 
 .decorated-zone::after {
@@ -41,20 +41,17 @@
   position: absolute;
   inset-block-end: 10px;
   inset-inline-start: 10px;
-  width: 25px;
-  height: 25px;
+  inline-size: 25px;
+  block-size: 25px;
   z-index: 1;
-  border-block-end: 1px solid var(--decor-color);
-  border-inline-start: 1px solid var(--decor-color);
+  border-block-end: 1px solid var(--accent-color);
+  border-inline-start: 1px solid var(--accent-color);
 }
 
-/* REC для dark */
-
 .decorated-zone-dark {
-  display: var(--display-rec);
   color: var(--accent-color);
   position: absolute;
-  inset-block-start: 12px;
+  inset-block-start: 8px;
   inset-inline-end: 39px;
   z-index: 1;
   font-weight: 400;
@@ -67,8 +64,8 @@
   position: absolute;
   inset-block-end: 8px;
   inset-inline-start: 43px;
-  width: 9px;
-  height: 9px;
+  inline-size: 9px;
+  block-size: 9px;
   border-radius: 50%;
   background: var(--accent-color);
   box-shadow: 0px 0px 4px 2px var(--accent-color);
@@ -80,7 +77,7 @@
 .header__theme-menu {
   justify-self: end;
   align-self: center;
-  padding: 10px;
+  margin-inline-end: 10px;
 }
 
 .header__theme-menu-list {
@@ -88,7 +85,7 @@
   flex-direction: column;
   align-items: center;
   gap: 10px;
-  color: var(--decor-color);
+  color: var(--accent-color);
 }
 
 .header__theme-menu-button {
@@ -98,117 +95,157 @@
   line-height: 18px;
   text-transform: lowercase;
   padding: 1.5px 13px;
-  height: 25px;
+  block-size: 25px;
   border: 1px solid transparent;
 }
 
-.header__theme-menu-button_active {
-  border: 1px solid var(--decor-color);
+/* Состояния для кнопок */
+
+.header__theme-menu-button:hover {
+  border: 1px solid var(--accent-color-transparent);
 }
 
-/* Лого и текст обложки */
+.header__theme-menu-button:focus {
+  outline: none;
+}
 
-.header__logo {
+.header__theme-menu-button:focus-visible {
+  outline: none;
+  border-block-end: 1px solid var(--accent-color);
+}
+
+.header__theme-menu-button_active {
+  border: 1px solid var(--accent-color);
+  pointer-events: none;
+}
+
+/* Заголовок и текст обложки */
+
+.cover__description {
   align-self: center;
   font-weight: 700;
   font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
-  color: var(--logo-color);
-  text-shadow: 4px 4px 0 var(--logo-shadow-color);
+  color: var(--cover-description-color);
+  text-shadow: 4px 4px 0 #FF0070;;
   padding: 10px;
 }
 
-.header__text {
+.cover__text {
   align-self: center;
+  justify-self: end;
   font-weight: 700;
   font-size: 18px;
   line-height: 23px;
-  color: var(--main-title-color);
-  background-color: var(--accent-color);
-  max-height: 117px;
-  margin: 10px;
+  color: var(--content-title-color);
+  background-color: var(--title-bg-color);
+  max-block-size: 117px;
+  max-inline-size: 364px;
+  margin-inline-start: 10px;
+  margin-inline-end: 10px;
+  margin-block-end: 10px;
 }
 
-/* Текстовый блок */
+/* Main ----------------------------------------------------*/
 
 .main {
   padding-inline-start: 10px;
   padding-inline-end: 10px;
 }
 
-.text-block {
+.section {
   padding-block-end: 50px;
 }
 
-.text-block__content:not(:last-of-type) {
+.section__content:not(:last-of-type) {
   padding-block-end: 20px;
 }
 
-.text-block__content:has(.text-block__content__subtitle) {
-  padding-block-start: 20px;
+.section__content:has(.section__content__subtitle) {
+  padding-block-start: 21px;
+  padding-block-end: 0;
 }
 
-.text-block__title {
+.section__title {
   font-size: 18px;
   line-height: 23px;
-  color: var(--decor-color);
-  padding-block-end: 20px;
+  color: var(--accent-color);
+  padding-block-end: 21px;
 }
 
-.text-block__content__title {
+.section__content__title {
   font-size: 18px;
   line-height: 23px;
-  color: var(--main-title-color);
-  background-color: var(--accent-color);
+  color: var(--content-title-color);
+  background-color: var(--title-bg-color);
 }
 
-.text-block__content__text {
+.section__content__text {
   font-weight: 400;
   font-size: 18px;
-  line-height: 23px;
+  line-height: 130%;
   color: var(--main-color);
   padding-block-start: 10px;
 }
 
-.text-block__content__subtitle {
-  color: var(--main-title-color);
+.section__content__subtitle {
+  color: var(--content-title-color);
   font-weight: 400;
   font-size: 18px;
   line-height: 23px;
-  background-color: var(--accent-color);
+  background-color: var(--title-bg-color);
 }
 
-.text-block__content__text a {
+.section__content__text a {
   text-decoration: none;
-  text-shadow: 2px 1px 0 var(--accent-color);
+  text-shadow: 2px 1px 0 var(--title-bg-color);
+}
+
+.section__content__text a:hover {
   border-block-end: 1px solid var(--main-color);
 }
- 
-.text-block__content__subtitle + .text-block__content__text a {
-  border: none;
+
+.section__content__text a:focus {
+  outline: none;
 }
 
-/* IMAGES BLOCK */
+.section__content__text a:focus-visible {
+  outline: none;
+  border: 1px solid var(--main-color);
+}
 
-.images-block {
+/* GALLERY */ 
+
+.gallery {
   display: flex;
   flex-direction: column;
   gap: 10px;
 }
 
-.image {
-  width: 100%;
+.gallery__item {
+  inline-size: 100%;
 }
+
+/* FOOTER ---------------------------------------------------- */
 
 .footer {
   position: relative;
   display: flex;
   align-items: center;
-  height: 100vh;
+  block-size: 100vh;
   margin-block-start: 40px;
 }
 
+.footer .cover__description {
+  text-shadow: 2px 2px 0 #FF0070;
+}
+
+
+ /* --- Для ПЛАНШЕТОВ 768px ------------------------------------------------------------------------------------------------- */
+
 @media (min-width: 768px) {
+
+/* HEADER ----------------------------------------------------*/
 
   .header {
     padding-block-start: 20px;
@@ -216,15 +253,21 @@
     margin-block-end: 60px;
   }
 
-  .header__logo {
+  .cover__description {
     padding: 0;
     font-size: clamp(7.5rem, 0.5625rem + 14.4531vw, 9.8125rem);
   }
 
-  .header__text {
+  .cover__text {
     justify-self: end;
-    margin: 20px;
-    width: clamp(22.75rem, -1.0625rem + 49.6094vw, 30.6875rem);
+    inline-size: clamp(22.75rem, -1.0625rem + 49.6094vw, 30.6875rem);
+    margin-block-end: 115px;
+    margin-inline-end: 20px;
+  }
+
+  .header__theme-menu {
+    margin-inline-end: 20px;
+    margin-block-start: 110px;
   }
 
   /* Декоративные элементы */
@@ -249,26 +292,14 @@
     inset-inline-start: 41px;
   }
 
-  /* HEADER */
-
-  .header__theme-menu {
-    padding: 20px;
-    justify-self: center;
-    align-self: start;
-  }
-
-  .header__theme-menu-list {
-    flex-direction: row;
-  }
-
-/* MAIN */
+/* Main ----------------------------------------------------*/
 
   .main {
     padding-inline-start: 20px;
     padding-inline-end: 20px;
   }
 
-  .text-block {
+  .section {
     display: grid;
     grid-template-columns: 1fr 2fr;
     grid-auto-rows: min-content;
@@ -276,58 +307,97 @@
     padding-block-end: 80px;
   }
 
-  .text-block__title {
+  .section__title {
     grid-column: 1 / 2;
     grid-row: 1 / 7;
   }
 
-  .grid-non {
+  .middle-section {
     display: block;
   }
 
-  .grid-non .text-block__title {
-    width: 30%;
+  .middle-section .section__title {
+    inline-size: 32%;
   }
 
-/* IMAGES BLOCK */
+/* gallery */
 
-  .images-block {
+  .gallery {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: repeat(4, auto);
-    /* grid-auto-rows: min-content; */
     gap: 20px;
   }
 
-  .image {
+  .gallery__item {
     object-fit: cover;
-    height: 100%;
+    block-size: 100%;
   }
 
-  .images-block__title {
+  .gallery__title {
     grid-column: 1/4;
   }
 
-  .image:first-of-type {
+  .gallery__item:first-of-type {
     grid-column: 1/3;
   }
 
-  .image:nth-of-type(2) {
+  .gallery__item:nth-of-type(2) {
     grid-column: 3/4;
     grid-row: 2/4;
   }
 
-  .image:nth-of-type(3) {
+  .gallery__item:nth-of-type(3) {
     grid-column: 1/2;
     grid-row: 3/5;
   }
 
-  .image:nth-of-type(5) {
+  .gallery__item:nth-of-type(5) {
     grid-column: 2/4;
     grid-row: 4/5;
   }
 
   .footer {
     justify-content: center;
+    margin-block-start: 60px;
+  }
+}
+
+ /* --- Для ПК 1024px ------------------------------------------------------------------------------------------------- */
+
+@media (min-width: 1024px) {
+  .header {
+    padding-block-start: 20px;
+    padding-block-end: 20px;
+    margin-block-end: 60px;
+  }
+
+  .header__theme-menu {
+    justify-self: center;
+    align-self: start;
+    padding: 0;
+    margin: 0;
+  }
+
+  .header__theme-menu-list {
+    flex-direction: row;
+  }
+
+  .cover__text {
+    margin-block-end: 56px;
+    max-inline-size: 491px;
+  }
+
+  .middle-section{
+    display: grid;
+    grid-template-columns: repeat(3, 1fr);
+    grid-auto-rows: min-content;
+    gap: 20px;
+  }
+
+  .middle-section .section__title {
+    grid-column: 1/4;
+    grid-row: 1/2;
+    padding-block-end: 0;
   }
 }
