--- a/styles/dark.css
+++ b/styles/dark.css
@@ -1,10 +1,10 @@
 .page.theme_dark {
-  --main-color: #F1B2CE;
-  --title-bg-color: #FF0070;
+  --main-color: #f1b2ce;
+  --title-bg-color: #ff0070;
   --bg-color: #000028;
-  --cover-description-color: #DB00FF;
+  --cover-description-color: #db00ff;
   --content-title-color: #000028;
-  --accent-color: #FF0070;
+  --accent-color: #ff0070;
   --accent-color-transparent: rgb(255 0 112 / 0.4);
   background-image: url("../images/cover-image-dark.png");
 }
@@ -14,11 +14,11 @@
 }
 
 :root.theme-dark {
-  --main-color: #F1B2CE;
-  --title-bg-color: #FF0070;
+  --main-color: #f1b2ce;
+  --title-bg-color: #ff0070;
   --bg-color: #000028;
-  --cover-description-color: #DB00FF;
+  --cover-description-color: #db00ff;
   --content-title-color: #000028;
-  --accent-color: #FF0070;
+  --accent-color: #ff0070;
   --accent-color-transparent: rgb(255 0 112 / 0.4);
 }
