--- a/styles/style.css
+++ b/styles/style.css
@@ -1,102 +1,102 @@
 .page {
+  block-size: 100vh;
+  background-color: var(--bg-color);
   background-image: url("../images/cover-image-dark.png");
-  background-size: cover;
-  background-position: center;
   background-repeat: no-repeat;
   background-attachment: fixed;
+  background-position: center;
+  background-size: cover;
   font-family: 'IBM Plex Mono', sans-serif;
   font-weight: normal;
-  background-color: var(--bg-color);
-  block-size: 100vh;
 }
 
 /* HEADER ----------------------------------------------------*/
 
 .header {
   position: relative;
-  block-size: 100vh;
+  display: grid;
   padding-block-start: 17px;
   padding-block-end: 13px;
   margin-block-end: 40px;
-  display: grid;
+  block-size: 100vh;
   grid-template-rows: repeat(3, 1fr);
 }
 
- /* Декоративные элементы */
+/* Декоративные элементы */
 
 .decorated-zone::before {
-  content: '';
   position: absolute;
-  inset-block-start: 10px;
-  inset-inline-end: 10px;
-  inline-size: 25px;
-  block-size: 25px;
   z-index: 1;
+  block-size: 25px;
+  inline-size: 25px;
   border-block-start: 1px solid var(--accent-color);
   border-inline-end: 1px solid var(--accent-color);
+  inset-block-start: 10px;
+  inset-inline-end: 10px;
+  content: '';
 }
 
 .decorated-zone::after {
-  content: '';
   position: absolute;
-  inset-block-end: 10px;
-  inset-inline-start: 10px;
-  inline-size: 25px;
-  block-size: 25px;
   z-index: 1;
+  block-size: 25px;
+  inline-size: 25px;
   border-block-end: 1px solid var(--accent-color);
   border-inline-start: 1px solid var(--accent-color);
+  inset-block-end: 10px;
+  inset-inline-start: 10px;
+  content: '';
 }
 
 .decorated-zone-dark {
-  color: var(--accent-color);
   position: absolute;
-  inset-block-start: 8px;
-  inset-inline-end: 39px;
   z-index: 1;
-  font-weight: 400;
-  font-size: 18px;
   line-height: 25px;
+  inset-block-start: 10px;
+  inset-inline-end: 39px;
+  color: var(--accent-color);
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .decorated-zone-dark::after {
-  content: '';
   position: absolute;
+  z-index: 1;
+  block-size: 9px;
+  inline-size: 9px;
   inset-block-end: 8px;
   inset-inline-start: 43px;
-  inline-size: 9px;
-  block-size: 9px;
   border-radius: 50%;
   background: var(--accent-color);
   box-shadow: 0px 0px 4px 2px var(--accent-color);
-  z-index: 1;
+  content: '';
 }
 
 /* Кнопки переключения темы */
 
 .header__theme-menu {
-  justify-self: end;
   align-self: center;
   margin-inline-end: 10px;
+  justify-self: end;
 }
 
 .header__theme-menu-list {
   display: flex;
-  flex-direction: column;
   align-items: center;
-  gap: 10px;
+  flex-direction: column;
   color: var(--accent-color);
+  gap: 10px;
 }
 
 .header__theme-menu-button {
-  background-color: transparent;
-  font-weight: 400;
-  font-size: 18px;
   line-height: 18px;
-  text-transform: lowercase;
   padding: 1.5px 13px;
   block-size: 25px;
   border: 1px solid transparent;
+  background-color: transparent;
+  text-transform: lowercase;
+  font-size: 18px;
+  font-weight: 400;
 }
 
 /* Состояния для кнопок */
@@ -110,8 +110,8 @@
 }
 
 .header__theme-menu-button:focus-visible {
-  outline: none;
   border-block-end: 1px solid var(--accent-color);
+  outline: none;
 }
 
 .header__theme-menu-button_active {
@@ -123,30 +123,30 @@
 
 .cover__description {
   align-self: center;
-  font-weight: 700;
-  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
   line-height: 82.5%;
-  color: var(--cover-description-color);
-  text-shadow: 4px 4px 0 #FF0070;;
   padding: 10px;
+  color: var(--cover-description-color);
+  text-shadow: 4px 4px 0 #FF0070;
+  font-size: clamp(7.25rem, 7.0115rem + 1.0178vw, 7.5rem);
+  font-weight: 700;
 }
 
 .cover__text {
   align-self: center;
-  justify-self: end;
-  font-weight: 700;
-  font-size: 18px;
   line-height: 23px;
-  color: var(--content-title-color);
-  background-color: var(--title-bg-color);
-  max-block-size: 117px;
-  max-inline-size: 364px;
+  margin-block-end: 10px;
   margin-inline-start: 10px;
   margin-inline-end: 10px;
-  margin-block-end: 10px;
+  max-block-size: 117px;
+  max-inline-size: 364px;
+  color: var(--content-title-color);
+  background-color: var(--title-bg-color);
+  font-size: 18px;
+  font-weight: 700;
+  justify-self: end;
 }
 
-/* Main ----------------------------------------------------*/
+/* MAIN ----------------------------------------------------*/
 
 .main {
   padding-inline-start: 10px;
@@ -167,38 +167,40 @@
 }
 
 .section__title {
-  font-size: 18px;
   line-height: 23px;
-  color: var(--accent-color);
   padding-block-end: 21px;
+  color: var(--accent-color);
+  font-size: 18px;
 }
 
 .section__content__title {
-  font-size: 18px;
   line-height: 23px;
   color: var(--content-title-color);
   background-color: var(--title-bg-color);
+  font-size: 18px;
 }
 
 .section__content__text {
-  font-weight: 400;
-  font-size: 18px;
   line-height: 130%;
-  color: var(--main-color);
   padding-block-start: 10px;
+  color: var(--main-color);
+  font-size: 18px;
+  font-weight: 400;
 }
 
 .section__content__subtitle {
-  color: var(--content-title-color);
-  font-weight: 400;
-  font-size: 18px;
   line-height: 23px;
+  color: var(--content-title-color);
   background-color: var(--title-bg-color);
+  font-size: 18px;
+  font-weight: 400;
 }
 
+/* Состояния для ссылок */
+
 .section__content__text a {
-  text-decoration: none;
   text-shadow: 2px 1px 0 var(--title-bg-color);
+  text-decoration: none;
 }
 
 .section__content__text a:hover {
@@ -210,11 +212,11 @@
 }
 
 .section__content__text a:focus-visible {
-  outline: none;
   border: 1px solid var(--main-color);
+  outline: none;
 }
 
-/* GALLERY */ 
+/* GALLERY */
 
 .gallery {
   display: flex;
@@ -232,8 +234,8 @@
   position: relative;
   display: flex;
   align-items: center;
-  block-size: 100vh;
   margin-block-start: 40px;
+  block-size: 100vh;
 }
 
 .footer .cover__description {
@@ -241,11 +243,11 @@
 }
 
 
- /* --- Для ПЛАНШЕТОВ 768px ------------------------------------------------------------------------------------------------- */
+/* --- ДЛЯ ПЛАНШЕТОВ 768px ------------------------------------------------------------------------------------------------- */
 
 @media (min-width: 768px) {
 
-/* HEADER ----------------------------------------------------*/
+  /* HEADER ----------------------------------------------------*/
 
   .header {
     padding-block-start: 20px;
@@ -259,15 +261,15 @@
   }
 
   .cover__text {
-    justify-self: end;
-    inline-size: clamp(22.75rem, -1.0625rem + 49.6094vw, 30.6875rem);
     margin-block-end: 115px;
     margin-inline-end: 20px;
+    inline-size: clamp(22.75rem, -1.0625rem + 49.6094vw, 30.6875rem);
+    justify-self: end;
   }
 
   .header__theme-menu {
-    margin-inline-end: 20px;
     margin-block-start: 110px;
+    margin-inline-end: 20px;
   }
 
   /* Декоративные элементы */
@@ -292,7 +294,7 @@
     inset-inline-start: 41px;
   }
 
-/* Main ----------------------------------------------------*/
+  /* Main ----------------------------------------------------*/
 
   .main {
     padding-inline-start: 20px;
@@ -301,10 +303,10 @@
 
   .section {
     display: grid;
+    padding-block-end: 80px;
     grid-template-columns: 1fr 2fr;
     grid-auto-rows: min-content;
     column-gap: 20px;
-    padding-block-end: 80px;
   }
 
   .section__title {
@@ -320,7 +322,7 @@
     inline-size: 32%;
   }
 
-/* gallery */
+  /* GALLERY */
 
   .gallery {
     display: grid;
@@ -330,8 +332,8 @@
   }
 
   .gallery__item {
-    object-fit: cover;
     block-size: 100%;
+    object-fit: cover;
   }
 
   .gallery__title {
@@ -363,7 +365,7 @@
   }
 }
 
- /* --- Для ПК 1024px ------------------------------------------------------------------------------------------------- */
+/* --- ДЛЯ ПК 1024px ------------------------------------------------------------------------------------------------- */
 
 @media (min-width: 1024px) {
   .header {
@@ -373,10 +375,10 @@
   }
 
   .header__theme-menu {
-    justify-self: center;
     align-self: start;
     padding: 0;
     margin: 0;
+    justify-self: center;
   }
 
   .header__theme-menu-list {
@@ -388,7 +390,7 @@
     max-inline-size: 491px;
   }
 
-  .middle-section{
+  .middle-section {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-auto-rows: min-content;
@@ -396,8 +398,8 @@
   }
 
   .middle-section .section__title {
+    padding-block-end: 0;
     grid-column: 1/4;
     grid-row: 1/2;
-    padding-block-end: 0;
   }
 }
